--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="Css/styles.css">
 </head>
 <body>
-    <h1>Olá DSMmovie</h1>
-    <h3>Promoções</h3>
-    <h3>Agenda dos filmes</h3>
+    <header>
+        <nav class="container">
+            <h1>DSMovie</h1>
+            <a href="https://github.com/devsuperior">/devsuperior</a>
+        </nav>
+    </header>
 </body>
 </html>
